Adjust spacing of doll within frame to stop overlaps

--- a/src/scss/settings/_layout.scss
+++ b/src/scss/settings/_layout.scss
@@ -35,7 +35,7 @@ $lookmaker-aspect-ratio: ($lookmaker-height / $lookmaker-width) * 100%;
 $doll-aspect-ratio: ($lookmaker-height / $doll-width) * 100%;
 $wardrobe-aspect-ratio: ($lookmaker-height / $wardrobe-width) * 100%;
 
-$doll-frame-padding: 19%;
+$doll-frame-padding: 19.5%;
 $doll-title-padding: 0 15%;
 $doll-title-height: 12.5%;
 $wardrobe-frame-padding: 17% 11% 7%;
